--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 </head>
 <body>
  
-    
+    <header>
+        <h1>Todo List</h1>
+    </header>
+
+    <form>
+        <input type="text" class="todo-input">
+        <button class="add-todo-button">
+            <i class="fas fa-plus-square"></i>
+        </button>
+    </form>
+
+    <div class="todo-container">
+        <ul class="todo-list">
+            
+        </ul>
+    </div>
 
 </body>
 </html>
